<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/answer_button"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:text="@string/question3"
                android:textColor="#000"
                android:textSize="@dimen/large_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_height"
                android:layout_marginBottom="@dimen/marginTopOrBottom"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:scaleType="centerCrop"
                android:src="@drawable/question3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:text="@string/question3_text"
                android:textColor="#000"
                android:textSize="@dimen/medium_text_size" />

            <CheckBox
                android:id="@+id/cb1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopOrBottom"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/question3_cb1"
                android:textColor="#000"
                android:textSize="@dimen/small_text_size"/>
            <CheckBox
                android:id="@+id/cb2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/question3_cb2"
                android:textColor="#000"
                android:textSize="@dimen/small_text_size"/>
            <CheckBox
                android:id="@+id/cb3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/question3_cb3"
                android:textColor="#000"
                android:textSize="@dimen/small_text_size"/>
            <CheckBox
                android:id="@+id/cb4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/question3_cb4"
                android:textColor="#000"
                android:textSize="@dimen/small_text_size"/>
            <CheckBox
                android:id="@+id/cb5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/question3_cb5"
                android:textColor="#000"
                android:textSize="@dimen/small_text_size"/>

            <CheckBox
                android:id="@+id/cb6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/question3_cb6"
                android:textColor="#000"
                android:textSize="@dimen/small_text_size"/>

            <CheckBox
                android:id="@+id/cb7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:text="@string/question3_cb7"
                android:textColor="#000"
                android:textSize="@dimen/small_text_size"/>

            <CheckBox
                android:id="@+id/cb8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginBottom="@dimen/marginLastBottom"
                android:text="@string/question3_cb8"
                android:textColor="#000"
                android:textSize="@dimen/small_text_size"/>


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/answer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin"
        android:text="@string/submit_answer"
        android:onClick="answerListener"/>
</RelativeLayout>